force-app/main/default/objects/Broadcast_Message__c/Broadcast_Message__c.object-meta.xml
<CustomObject>
    <description>Allows users to set messages that can then be rendered by an Aura Component. Allows administrators and app owners to develop custom messages that will display on their apps</description>
    <label>Broadcast Message</label>
    <nameField>
        <label>Broadcast Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcast Messages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>