force-app/main/default/objects/Broadcast_Message__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>allows the user to set a message as active or inactive (unchecked).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>