force-app/main/default/objects/Broadcast_Message__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>Main content to be displayed in a message</description>
    <label>Message Content</label>
    <length>64000</length>
    <type>Html</type>
</CustomField>