force-app/main/default/objects/Broadcast_Message__c/fields/RecentUpdate__c.field-meta.xml
<CustomField>
    <fullName>RecentUpdate__c</fullName>
    <description>Evaluates if a record has been updated in the past 7 days, if so, marked as true</description>
    <formula>LastModifiedDate  &gt; NOW()-7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecentUpdate</label>
    <type>Checkbox</type>
</CustomField>